# mlpipeline-with-dvc

./: .gitignore  Cargo.toml  README.md  dvc.yaml  params.yaml  pyproject.toml
data/raw/: .gitignore  autompg.csv.dvc
pysrc/: train.py
src/: main.rs
